# iodev_tempclient

./: pyproject.toml
iodev_tempclient/: .gitignore  app.py  configuration.yaml  main.py
iodev_tempclient/services/: ioss_core.py
iodev_tempclient/utils/: ConfigManager.py  setup_logger.py
